---------------------------------------------------------------------------------------------------
Version: 1.1.18
Date: 2020-??-??
  Bugfixes:
    - Fixed Omnicrystal errors
    - Fixes for pyanodon compatibility
---------------------------------------------------------------------------------------------------
Version: 1.1.17
Date: 2020-06-29
  Bugfixes:
    - Fixed old style sorting recipes trying to work when not intended
---------------------------------------------------------------------------------------------------
Version: 1.1.17
  Bugfixes:
    - Fixed old style sorting recipes trying to work when not intended
    - Fixed broken function breaking fluorite activation system with petrochem
---------------------------------------------------------------------------------------------------
Version: 1.1.15
  Bugfixes:
    - Special vanilla with omnicrystal not working
    - omnicrystal failing when analysing inactive recipes
    - Patched bug with infinite resource mining
---------------------------------------------------------------------------------------------------
Version: 1.1.14
  Features:
    - Removed dependancy on bobs mods
    - Added 2 new ores (Meta-Garnierite, Nova-Leucoxene)
    - Added a new mixed sorting tier for a slightly higher yield of products (exacerbated by prod)
    - Added 5 blended ores (Stannic, Plumbic, Manganic, Titanic, Phosphic)
    - Added support to work with Angels Special-vanilla setting
    - Prepared changes to integrate clowns resources into angels generation code (waiting for the angels update to come through)
    - Added preliminary support for Pyanodons ores, some feedback on balance/usefulness would be good (i have not played Py too much)
  Bugfixes:
    - Removed duplicatated recipes from angels
      - not deleted them yet, just hidden them to prevent base breakage
    - Fixed infinite ores overriding reglar ores if enabled