@@ -1,7 +1,7 @@
 {
   "name": "Clowns-Extended-Minerals",
   "version": "1.1.18",
-  "factorio_version": "0.18",
+  "factorio_version": "1.0",
   "title": "MadClown01's Extended AngelBob Minerals",
   "author": "MadClown01",
   "contact": "",
