@@ -232,7 +232,7 @@ clowns.tables.adamantite =       {
 clowns.tables.antitate = {
   ["!!"] = (not special_vanilla) and {false, false, false, true},
   ["tin-ore"] = (not special_vanilla) and {2, 2, 3, 3},
-  ["solid-lithium-chloride"] = (not special_vanilla) and {1, 1, 1, 2},
+  ["solid-lithium"] = (not special_vanilla) and {1, 1, 1, 2},
   ["nickel-ore"] = (not special_vanilla) and {0, 1, 1, 1},
   ["bauxite-ore"] = (not special_vanilla) and {0, 1, 1, 1},
   ["chrome-ore"] = (not special_vanilla) and {0, 0, 1, 1},
