@@ -1,7 +1,7 @@
 {
   "name": "Clowns-Science",
-  "version": "1.0.25",
-  "factorio_version": "0.18",
+  "version": "1.0.26",
+  "factorio_version": "1.0",
   "title": "MadClown01's Science",
   "author": "MadClown01",
   "contact": "",
